BajiDeveloperEdition/src/objects/Shipping_Invoice__c.object
<CustomObject>
    <fields>
        <fullName>GrandTotal__c</fullName>
        <description>The total amount, including tax and shipping</description>
        <label>GrandTotal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ShippingDiscount__c</fullName>
        <description>Only applied once when subtotal amount reaches $100</description>
        <label>ShippingDiscount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shipping__c</fullName>
        <description>The amount charged for shipping (assumes $0.75 per pound)</description>
        <label>Shipping</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subtotal__c</fullName>
        <description>The subtotal</description>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <description>The amount of tax (assumes 9.25%)</description>
        <label>Tax</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalWeight__c</fullName>
        <description>The total weight of all items</description>
        <label>TotalWeight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Shipping_invoice</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Shipping_invoice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipping_invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>